--- a/Nucleo575_Display_proj.ioc
+++ b/Nucleo575_Display_proj.ioc
@@ -9,10 +9,6 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
-GPDMA1.DIRECTION_GPDMACH0=DMA_MEMORY_TO_PERIPH
-GPDMA1.IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0=__NULL
-GPDMA1.IPParameters=IPHANDLE_GPDMACH0-SIMPLEREQUEST_GPDMACH0,REQUEST_GPDMACH0,DIRECTION_GPDMACH0
-GPDMA1.REQUEST_GPDMACH0=GPDMA1_REQUEST_SPI1_TX
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 MMTAppRegionsCount=0
@@ -22,23 +18,21 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=PWR
-Mcu.IP11=RCC
-Mcu.IP12=SPI1
-Mcu.IP13=SYS
-Mcu.IP14=TIM15
-Mcu.IP15=UCPD1
-Mcu.IP16=USART1
-Mcu.IP17=USB_OTG_FS
+Mcu.IP10=SPI1
+Mcu.IP11=SYS
+Mcu.IP12=TIM15
+Mcu.IP13=UCPD1
+Mcu.IP14=USART1
+Mcu.IP15=USB_OTG_FS
 Mcu.IP2=CRC
 Mcu.IP3=DEBUG
-Mcu.IP4=GPDMA1
-Mcu.IP5=ICACHE
-Mcu.IP6=LPBAM
-Mcu.IP7=LPBAMQUEUE
-Mcu.IP8=MEMORYMAP
-Mcu.IP9=NVIC
-Mcu.IPNb=18
+Mcu.IP4=LPBAM
+Mcu.IP5=LPBAMQUEUE
+Mcu.IP6=MEMORYMAP
+Mcu.IP7=NVIC
+Mcu.IP8=PWR
+Mcu.IP9=RCC
+Mcu.IPNb=16
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -62,30 +56,27 @@ Mcu.Pin24=PB3 (JTDO/TRACESWO)
 Mcu.Pin25=PB5
 Mcu.Pin26=PB7
 Mcu.Pin27=VP_CRC_VS_CRC
-Mcu.Pin28=VP_GPDMA1_VS_GPDMACH0
-Mcu.Pin29=VP_ICACHE_VS_ICACHE
+Mcu.Pin28=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin29=VP_PWR_VS_DBSignals
 Mcu.Pin3=PC2
-Mcu.Pin30=VP_ICACHE_VS_ENABLE_ICACHE_MEMORY
-Mcu.Pin31=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin32=VP_PWR_VS_DBSignals
-Mcu.Pin33=VP_PWR_VS_SECSignals
-Mcu.Pin34=VP_PWR_VS_LPOM
-Mcu.Pin35=VP_PWR_Vdda
-Mcu.Pin36=VP_RCC_LSE
-Mcu.Pin37=VP_SYS_VS_tim7
-Mcu.Pin38=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin39=VP_LPBAM_VS_SIG1
+Mcu.Pin30=VP_PWR_VS_SECSignals
+Mcu.Pin31=VP_PWR_VS_LPOM
+Mcu.Pin32=VP_PWR_Vdda
+Mcu.Pin33=VP_RCC_LSE
+Mcu.Pin34=VP_SYS_VS_tim7
+Mcu.Pin35=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin36=VP_LPBAM_VS_SIG1
+Mcu.Pin37=VP_LPBAM_VS_SIG4
+Mcu.Pin38=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin39=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0
 Mcu.Pin4=PA1
-Mcu.Pin40=VP_LPBAM_VS_SIG4
-Mcu.Pin41=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin42=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0
-Mcu.Pin43=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1
+Mcu.Pin40=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1
 Mcu.Pin5=PA6
 Mcu.Pin6=PA7
 Mcu.Pin7=PB0
 Mcu.Pin8=PB1
 Mcu.Pin9=PB2
-Mcu.PinsNb=44
+Mcu.PinsNb=41
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.1.0
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1
 Mcu.ThirdPartyNb=2
@@ -97,7 +88,6 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
-NVIC.GPDMA1_Channel0_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -115,9 +105,10 @@ NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_Label,PinAttribute
 PA1.GPIO_Label=DISPL_SCK
 PA1.Mode=Full_Duplex_Master
+PA1.PinAttribute=Free
 PA1.Signal=SPI1_SCK
 PA10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA10.GPIO_Label=USART1_RX
@@ -149,30 +140,35 @@ PA15\ (JTDI).GPIO_Label=UCPD1_CC1
 PA15\ (JTDI).Locked=true
 PA15\ (JTDI).Mode=Sink_AllSignals
 PA15\ (JTDI).Signal=UCPD1_CC1
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=GPIO_Label,PinAttribute
 PA6.GPIO_Label=TOUCH_MISO
 PA6.Mode=Full_Duplex_Master
+PA6.PinAttribute=Free
 PA6.Signal=SPI1_MISO
-PA7.GPIOParameters=GPIO_Label
+PA7.GPIOParameters=GPIO_Label,PinAttribute
 PA7.GPIO_Label=DISPL_MOSI
 PA7.Mode=Full_Duplex_Master
+PA7.PinAttribute=Free
 PA7.Signal=SPI1_MOSI
-PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,PinAttribute
 PA9.GPIO_Label=USART1_TX
 PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
 PA9.Mode=Asynchronous
+PA9.PinAttribute=
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label
+PB0.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,PinAttribute
 PB0.GPIO_Label=DISPL_CS
 PB0.GPIO_PuPd=GPIO_PULLUP
 PB0.Locked=true
+PB0.PinAttribute=Free
 PB0.PinState=GPIO_PIN_SET
 PB0.Signal=GPIO_Output
-PB1.GPIOParameters=GPIO_Label
+PB1.GPIOParameters=GPIO_Label,PinAttribute
 PB1.GPIO_Label=DISPL_RST
 PB1.Locked=true
+PB1.PinAttribute=Free
 PB1.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=UCPD_FLT
@@ -201,21 +197,27 @@ PB7.GPIO_PuPd=GPIO_PULLUP
 PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB7.Locked=true
 PB7.Signal=GPIO_Output
-PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI,PinAttribute
 PC13.GPIO_Label=USER_BUTTON
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
+PC13.PinAttribute=Free
 PC13.Signal=GPXTI13
+PC14-OSC32_IN\ (PC14).GPIOParameters=PinAttribute
 PC14-OSC32_IN\ (PC14).Locked=true
 PC14-OSC32_IN\ (PC14).Mode=LSE-External-Oscillator
+PC14-OSC32_IN\ (PC14).PinAttribute=Free
 PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
+PC15-OSC32_OUT\ (PC15).GPIOParameters=PinAttribute
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
+PC15-OSC32_OUT\ (PC15).PinAttribute=Free
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_Label,PinAttribute
 PC2.GPIO_Label=VBUS_SENSE
 PC2.Locked=true
 PC2.Mode=IN3-Single-Ended
+PC2.PinAttribute=Free
 PC2.Signal=ADC1_IN3
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PC7.GPIO_Label=LED_GREEN
@@ -279,13 +281,14 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ICACHE_Init-ICACHE-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_UCPD1_Init-UCPD1-false-LL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_TIM15_Init-TIM15-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,13-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_UCPD1_Init-UCPD1-false-LL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
 RCC.APB1Freq_Value=160000000
 RCC.APB1TimFreq_Value=160000000
-RCC.APB2Freq_Value=160000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=80000000
 RCC.APB2TimFreq_Value=160000000
 RCC.APB3Freq_Value=160000000
 RCC.CK48Freq_Value=48000000
@@ -305,7 +308,7 @@ RCC.I2C1Freq_Value=160000000
 RCC.I2C2Freq_Value=160000000
 RCC.I2C3Freq_Value=160000000
 RCC.I2C4Freq_Value=160000000
-RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.IPParameters=ADCFreq_Value,ADF1Freq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CK48Freq_Value,CRSFreq_Value,CortexFreq_Value,DACCLockSelectionVirtual,DACFreq_Value,EPOD_VALUE,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIDIV_VALUE,LSI_VALUE,MCO1PinFreq_Value,MDF1Freq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SPI1CLockSelection,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
 RCC.LPTIM2Freq_Value=160000000
 RCC.LPUART1Freq_Value=160000000
 RCC.LSCOPinFreq_Value=32000
@@ -330,14 +333,15 @@ RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=258000000
 RCC.SAI2Freq_Value=258000000
 RCC.SDMMCFreq_Value=160000000
-RCC.SPI1Freq_Value=160000000
+RCC.SPI1CLockSelection=RCC_SPI1CLKSOURCE_PCLK2
+RCC.SPI1Freq_Value=80000000
 RCC.SPI2Freq_Value=160000000
 RCC.SPI3Freq_Value=160000000
 RCC.SYSCLKFreq_VALUE=160000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.UART4Freq_Value=160000000
 RCC.UART5Freq_Value=160000000
-RCC.USART1Freq_Value=160000000
+RCC.USART1Freq_Value=80000000
 RCC.USART2Freq_Value=160000000
 RCC.USART3Freq_Value=160000000
 RCC.USBFreq_Value=48000000
@@ -352,9 +356,10 @@ SH.GPXTI13.ConfNb=1
 SH.GPXTI14.0=GPIO_EXTI14
 SH.GPXTI14.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
-SPI1.CalculateBaudRate=625.0 KBits/s
+SPI1.CalculateBaudRate=312.5 KBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.CMSISJjRTOS2_Checked=true
@@ -383,12 +388,6 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
-VP_GPDMA1_VS_GPDMACH0.Mode=SIMPLEREQUEST_GPDMACH0
-VP_GPDMA1_VS_GPDMACH0.Signal=GPDMA1_VS_GPDMACH0
-VP_ICACHE_VS_ENABLE_ICACHE_MEMORY.Mode=Memoryregions
-VP_ICACHE_VS_ENABLE_ICACHE_MEMORY.Signal=ICACHE_VS_ENABLE_ICACHE_MEMORY
-VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
-VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
 VP_LPBAMQUEUE_VS_QUEUE.Signal=LPBAMQUEUE_VS_QUEUE
 VP_LPBAM_VS_SIG1.Mode=SmartRun
