--- a/Nucleo575_Display_proj.ioc
+++ b/Nucleo575_Display_proj.ioc
@@ -9,8 +9,40 @@ CAD.pinconfig=
 CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 File.Version=6
+GPDMA1.IPParameters=LINKALLOCATEDPORT_GPDMACH6,PRIORITY_LL_GPDMACH6
+GPDMA1.LINKALLOCATEDPORT_GPDMACH6=DMA_LINK_ALLOCATED_PORT1
+GPDMA1.PRIORITY_LL_GPDMACH6=DMA_LOW_PRIORITY_HIGH_WEIGHT
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
+Linkedlist.MDMA_Channel0.GP_SW.0.BlkHWRequest=DMA_BREQ_SINGLE_BURST
+Linkedlist.MDMA_Channel0.GP_SW.0.DataAlignment=DMA_DATA_RIGHTALIGN_ZEROPADDED
+Linkedlist.MDMA_Channel0.GP_SW.0.DataExchange=DMA_EXCHANGE_NONE
+Linkedlist.MDMA_Channel0.GP_SW.0.DataHandling=ENABLE
+Linkedlist.MDMA_Channel0.GP_SW.0.DataSize=0
+Linkedlist.MDMA_Channel0.GP_SW.0.DestBurstLength=1
+Linkedlist.MDMA_Channel0.GP_SW.0.DestDataWidth=DMA_DEST_DATAWIDTH_BYTE
+Linkedlist.MDMA_Channel0.GP_SW.0.DestInc=DMA_DINC_FIXED
+Linkedlist.MDMA_Channel0.GP_SW.0.Direction=DMA_MEMORY_TO_PERIPH
+Linkedlist.MDMA_Channel0.GP_SW.0.DstAddress=0
+Linkedlist.MDMA_Channel0.GP_SW.0.Instance=MDMA_Channel0
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_MASTERDMA=GPDMA
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_NAME=Queue_tx
+Linkedlist.MDMA_Channel0.GP_SW.0.LL_TYPE=LINEAR
+Linkedlist.MDMA_Channel0.GP_SW.0.NODE_NAME=Node_tx
+Linkedlist.MDMA_Channel0.GP_SW.0.RequestParameters=LL_NAME,LL_MASTERDMA,LL_TYPE,NODE_NAME,BlkHWRequest,Requestforcodegen,Direction,SrcInc,DestInc,SrcDataWidth,DestDataWidth,SrcBurstLength,DestBurstLength,TransferAllocatedPortSrc,TransferAllocatedPortDest,TransferEventMode,DataHandling,DataExchange,DataAlignment,TriggerPolarity,SrcAddress,DstAddress,DataSize
+Linkedlist.MDMA_Channel0.GP_SW.0.Requestforcodegen=GPDMA1_REQUEST_SPI1_TX
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcAddress=0
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcBurstLength=1
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcDataWidth=DMA_SRC_DATAWIDTH_BYTE
+Linkedlist.MDMA_Channel0.GP_SW.0.SrcInc=DMA_SINC_INCREMENTED
+Linkedlist.MDMA_Channel0.GP_SW.0.TransferAllocatedPortDest=DMA_DEST_ALLOCATED_PORT0
+Linkedlist.MDMA_Channel0.GP_SW.0.TransferAllocatedPortSrc=DMA_SRC_ALLOCATED_PORT1
+Linkedlist.MDMA_Channel0.GP_SW.0.TransferEventMode=DMA_TCEM_BLOCK_TRANSFER
+Linkedlist.MDMA_Channel0.GP_SW.0.TriggerPolarity=DMA_TRIG_POLARITY_MASKED
+Linkedlist.MDMA_Channel0.Request0=GP_SW
+Linkedlist.MDMA_Channel0.RequestsNb=1
+Linkedlist.RequestSet0=MDMA_Channel0
+Linkedlist.RequestSetsNb=1
 MMTAppRegionsCount=0
 MMTConfigApplied=false
 Mcu.CPN=STM32U575ZIT6Q
@@ -18,65 +50,70 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32U5
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M33_NS
-Mcu.IP10=SPI1
-Mcu.IP11=SYS
-Mcu.IP12=TIM15
-Mcu.IP13=UCPD1
-Mcu.IP14=USART1
-Mcu.IP15=USB_OTG_FS
+Mcu.IP10=NVIC
+Mcu.IP11=PWR
+Mcu.IP12=RCC
+Mcu.IP13=SPI1
+Mcu.IP14=SYS
+Mcu.IP15=TIM15
+Mcu.IP16=UCPD1
+Mcu.IP17=USART1
+Mcu.IP18=USB_OTG_FS
 Mcu.IP2=CRC
 Mcu.IP3=DEBUG
-Mcu.IP4=LPBAM
-Mcu.IP5=LPBAMQUEUE
-Mcu.IP6=MEMORYMAP
-Mcu.IP7=NVIC
-Mcu.IP8=PWR
-Mcu.IP9=RCC
-Mcu.IPNb=16
+Mcu.IP4=GPDMA1
+Mcu.IP5=ICACHE
+Mcu.IP6=LINKEDLIST
+Mcu.IP7=LPBAM
+Mcu.IP8=LPBAMQUEUE
+Mcu.IP9=MEMORYMAP
+Mcu.IPNb=19
 Mcu.Name=STM32U575ZITxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PF12
-Mcu.Pin11=PF13
-Mcu.Pin12=PF14
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PG2
-Mcu.Pin16=PC7
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PB1
+Mcu.Pin11=PB2
+Mcu.Pin12=PF12
+Mcu.Pin13=PF13
+Mcu.Pin14=PF14
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PG2
+Mcu.Pin18=PC7
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13 (JTMS/SWDIO)
-Mcu.Pin22=PA14 (JTCK/SWCLK)
-Mcu.Pin23=PA15 (JTDI)
-Mcu.Pin24=PB3 (JTDO/TRACESWO)
-Mcu.Pin25=PB5
-Mcu.Pin26=PB7
-Mcu.Pin27=VP_CRC_VS_CRC
-Mcu.Pin28=VP_LPBAMQUEUE_VS_QUEUE
-Mcu.Pin29=VP_PWR_VS_DBSignals
-Mcu.Pin3=PC2
-Mcu.Pin30=VP_PWR_VS_SECSignals
-Mcu.Pin31=VP_PWR_VS_LPOM
-Mcu.Pin32=VP_PWR_Vdda
-Mcu.Pin33=VP_RCC_LSE
-Mcu.Pin34=VP_SYS_VS_tim7
-Mcu.Pin35=VP_TIM15_VS_ClockSourceINT
-Mcu.Pin36=VP_LPBAM_VS_SIG1
-Mcu.Pin37=VP_LPBAM_VS_SIG4
-Mcu.Pin38=VP_MEMORYMAP_VS_MEMORYMAP
-Mcu.Pin39=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0
-Mcu.Pin4=PA1
-Mcu.Pin40=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PB2
-Mcu.PinsNb=41
+Mcu.Pin20=PA10
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13 (JTMS/SWDIO)
+Mcu.Pin24=PA14 (JTCK/SWCLK)
+Mcu.Pin25=PA15 (JTDI)
+Mcu.Pin26=PB3 (JTDO/TRACESWO)
+Mcu.Pin27=PB5
+Mcu.Pin28=PB7
+Mcu.Pin29=VP_CRC_VS_CRC
+Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=VP_GPDMA1_VS_GPDMACH6
+Mcu.Pin31=VP_ICACHE_VS_ICACHE
+Mcu.Pin32=VP_LPBAMQUEUE_VS_QUEUE
+Mcu.Pin33=VP_PWR_VS_SECSignals
+Mcu.Pin34=VP_PWR_VS_LPOM
+Mcu.Pin35=VP_PWR_Vdda
+Mcu.Pin36=VP_SYS_VS_tim6
+Mcu.Pin37=VP_TIM15_VS_ClockSourceINT
+Mcu.Pin38=VP_LPBAM_VS_SIG1
+Mcu.Pin39=VP_LPBAM_VS_SIG4
+Mcu.Pin4=PH1-OSC_OUT (PH1)
+Mcu.Pin40=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin41=VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0
+Mcu.Pin42=VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1
+Mcu.Pin5=PC2
+Mcu.Pin6=PA1
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=43
 Mcu.ThirdParty0=STMicroelectronics.X-CUBE-FREERTOS.1.1.0
 Mcu.ThirdParty1=STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1
 Mcu.ThirdPartyNb=2
@@ -88,6 +125,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.EXTI14_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
+NVIC.GPDMA1_Channel6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -101,9 +139,9 @@ NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM15_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
-NVIC.TIM7_IRQn=true\:15\:0\:false\:false\:true\:false\:false\:true\:true
-NVIC.TimeBase=TIM7_IRQn
-NVIC.TimeBaseIP=TIM7
+NVIC.TIM6_IRQn=true\:0\:0\:true\:false\:true\:false\:false\:true\:true
+NVIC.TimeBase=TIM6_IRQn
+NVIC.TimeBaseIP=TIM6
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.GPIOParameters=GPIO_Label,PinAttribute
 PA1.GPIO_Label=DISPL_SCK
@@ -150,13 +188,12 @@ PA7.GPIO_Label=DISPL_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.PinAttribute=Free
 PA7.Signal=SPI1_MOSI
-PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,PinAttribute
+PA9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
 PA9.GPIO_Label=USART1_TX
 PA9.GPIO_PuPd=GPIO_PULLDOWN
 PA9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA9.Locked=true
 PA9.Mode=Asynchronous
-PA9.PinAttribute=
 PA9.Signal=USART1_TX
 PB0.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,PinAttribute
 PB0.GPIO_Label=DISPL_CS
@@ -247,6 +284,10 @@ PG2.GPIO_PuPd=GPIO_PULLUP
 PG2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PG2.Locked=true
 PG2.Signal=GPIO_Output
+PH0-OSC_IN\ (PH0).Mode=HSE-External-Oscillator
+PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
+PH1-OSC_OUT\ (PH1).Mode=HSE-External-Oscillator
+PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
 PWR.IPParameters=PowerMode
 PWR.PowerMode=PWR_SMPS_SUPPLY
 PinOutPanel.RotationAngle=0
@@ -281,7 +322,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_UCPD1_Init-UCPD1-false-LL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_TIM15_Init-TIM15-false-HAL-true,10-MX_CRC_Init-CRC-false-HAL-true,13-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,14-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_GPDMA1_Init-GPDMA1-false-HAL-true,4-MX_UCPD1_Init-UCPD1-false-LL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,7-MX_TIM15_Init-TIM15-false-HAL-true,8-MX_CRC_Init-CRC-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_ICACHE_Init-ICACHE-false-HAL-true,12-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,13-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1-false-HAL-false,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
 RCC.ADCFreq_Value=16000000
 RCC.ADF1Freq_Value=160000000
 RCC.AHBFreq_Value=160000000
@@ -359,22 +400,36 @@ SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CalculateBaudRate=312.5 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize,NSSPMode,MasterSSIdleness
+SPI1.MasterSSIdleness=SPI_MASTER_SS_IDLENESS_02CYCLE
 SPI1.Mode=SPI_MODE_MASTER
+SPI1.NSSPMode=SPI_NSS_PULSE_DISABLE
 SPI1.VirtualType=VM_MASTER
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.CMSISJjRTOS2_Checked=true
-STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.INCLUDE_uxTaskGetStackHighWaterMark2=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.INCLUDE_xEventGroupSetBitFromISR=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.INCLUDE_xTaskGetHandle=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.IPParameters=configUSE_NEWLIB_REENTRANT,configTOTAL_HEAP_SIZE,configENABLE_FPU,configRECORD_STACK_HIGH_ADDRESS,configUSE_IDLE_HOOK,configUSE_TICK_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,INCLUDE_xEventGroupSetBitFromISR,INCLUDE_xTaskGetHandle,INCLUDE_uxTaskGetStackHighWaterMark2,configTIMER_TASK_STACK_DEPTH,configMINIMAL_STACK_SIZE,RTOS2CcCMSISJjRTOS2JjCore,RTOS2CcCMSISJjRTOS2JjHeap
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjCore=TZIiNonIiSupported
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.RTOS2CcCMSISJjRTOS2JjHeap=HeapIi4
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configCHECK_FOR_STACK_OVERFLOW=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configENABLE_FPU=1
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configMINIMAL_STACK_SIZE=1024
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configRECORD_STACK_HIGH_ADDRESS=1
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configTIMER_TASK_STACK_DEPTH=1024
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configTOTAL_HEAP_SIZE=30720
-STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configUSE_NEWLIB_REENTRANT=1
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configUSE_IDLE_HOOK=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configUSE_MALLOC_FAILED_HOOK=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configUSE_NEWLIB_REENTRANT=0
+STMicroelectronics.X-CUBE-FREERTOS.1.1.0.configUSE_TICK_HOOK=0
 STMicroelectronics.X-CUBE-FREERTOS.1.1.0_SwParameter=RTOS2CcCMSISJjRTOS2JjHeap\:HeapIi4;RTOS2CcCMSISJjRTOS2JjCore\:TZIiNonIiSupported;
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.ApplicationCcGraphicsJjApplication=TouchGFXOoGenerator
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.GraphicsJjApplication_Checked=true
-STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.IPParameters=tgfx_custom_width,tgfx_custom_height,tgfx_oswrapper,tgfx_buffering_strategy,ApplicationCcGraphicsJjApplication
+STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.IPParameters=tgfx_custom_width,tgfx_custom_height,tgfx_oswrapper,tgfx_buffering_strategy,tgfx_hardware_accelerator,ApplicationCcGraphicsJjApplication
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.tgfx_buffering_strategy=Partial
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.tgfx_custom_height=320
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.tgfx_custom_width=480
+STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.tgfx_hardware_accelerator=dma_none
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1.tgfx_oswrapper=CMSIS V2
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1_IsPackSelfContextualization=true
 STMicroelectronics.X-CUBE-TOUCHGFX.4.22.1_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
@@ -388,6 +443,10 @@ USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
+VP_GPDMA1_VS_GPDMACH6.Mode=LINKEDLIST_GPDMACH6
+VP_GPDMA1_VS_GPDMACH6.Signal=GPDMA1_VS_GPDMACH6
+VP_ICACHE_VS_ICACHE.Mode=DirectMappedCache
+VP_ICACHE_VS_ICACHE.Signal=ICACHE_VS_ICACHE
 VP_LPBAMQUEUE_VS_QUEUE.Mode=QUEUEMODE
 VP_LPBAMQUEUE_VS_QUEUE.Signal=LPBAMQUEUE_VS_QUEUE
 VP_LPBAM_VS_SIG1.Mode=SmartRun
@@ -396,22 +455,18 @@ VP_LPBAM_VS_SIG4.Mode=LPDMA1
 VP_LPBAM_VS_SIG4.Signal=LPBAM_VS_SIG4
 VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
-VP_PWR_VS_DBSignals.Mode=DisableDeadBatterySignals
-VP_PWR_VS_DBSignals.Signal=PWR_VS_DBSignals
 VP_PWR_VS_LPOM.Mode=PowerOptimisation
 VP_PWR_VS_LPOM.Signal=PWR_VS_LPOM
 VP_PWR_VS_SECSignals.Mode=Security/Privilege
 VP_PWR_VS_SECSignals.Signal=PWR_VS_SECSignals
 VP_PWR_Vdda.Mode=isolationVdda
 VP_PWR_Vdda.Signal=PWR_Vdda
-VP_RCC_LSE.Mode=CRS SYNC Source LSE
-VP_RCC_LSE.Signal=RCC_LSE
 VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0.Mode=CMSISJjRTOS2
 VP_STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0.Signal=STMicroelectronics.X-CUBE-FREERTOS_VS_CMSISJjRTOS2_10.5.1_1.1.0
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1.Mode=GraphicsJjApplication
 VP_STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1.Signal=STMicroelectronics.X-CUBE-TOUCHGFX_VS_GraphicsJjApplication_4.22.1
-VP_SYS_VS_tim7.Mode=TIM7
-VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_SYS_VS_tim6.Mode=TIM6
+VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM15_VS_ClockSourceINT.Mode=Internal
 VP_TIM15_VS_ClockSourceINT.Signal=TIM15_VS_ClockSourceINT
 board=NUCLEO-U575ZI-Q
